--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -1,8 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Рецепты</title>
+    <link rel="stylesheet" href="{% static "recipe/css/style.css" %}">
 </head>
 <body>
     <h1>Все рецепты</h1>
@@ -10,7 +12,7 @@
     {% for recipe in recipe_list %}
         <h3>{{ recipe.title }}</h3>
         <p>{{ recipe.text }}</p>
-        <p>{{ recipe.create_date }}$bnsp;{{ recipe.author }}</p>
+        <p>{{ recipe.create_date }}&nbsp;{{ recipe.author }}</p>
 
     {% endfor %}
 
