--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -2,7 +2,19 @@
 
  {% block content %}
      <a href="/">На главную</a>
-     <h1>{{ recipe_detail.title }}</h1>
-     {{ recipe_detail.text|linebreaks }}
-     <p>{{ recipe_detail.create_date }}&nbsp;{{ recipe_detail.author }}</p>
+     <h1>{{ recipe.receipt }}</h1>
+    <h3>Пищевая ценность:</h3>
+    <ul>
+        <li>Жиры {{ recipe.energy.fat }}</li>
+{#        <li>calorific value {{ energy.calorific value }}</li>#}
+        <li>protein {{ recipe.energy.protein }}</li>
+        <li>carbohydrates {{ recipe.energy.carbohydrates }}</li>
+    </ul>
+{% for ingridient in recipe.ingredients %}
+    <p>{{ ingridient.name }}</p>
+    <p>Необходимо {{ ingridient.amount }} {{ ingridient.unit }}</p>
+    <hr>
+{% endfor %}
+    <p>Рецепт:</p>
+    {{ recipe.description|linebreaks }}
  {% endblock content %}
