--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -1,17 +1,15 @@
  {% extends 'base.html' %}
 
  {% block content %}
+     <a href="{% url 'recipe:recipe_list' %}">Рецепты</a> <a href="{% url 'recipe:ingridients_list' %}">Ингридиенты</a>
      <form action=".">
-         <input type="text" name="query" value="{{ query|default:'' }}">
+         <input type="text" id="query" name="query" value="{{ query|default:'' }}">
          <input type="submit" value="Поиск">
      </form>
     {% for recipe in recipe_list %}
-        <h3>{{ recipe.title }}</h3>
+        <h3><a href="{% url 'recipe:recipe_detail' recipe.receipt %}">{{ recipe.receipt }}</a></h3>
         <p>
-            {{ recipe.text|truncatewords:30 }}
-            <a href="{% url 'recipe_detail' recipe.id %}">Смотреть</a>
+            {{ recipe.description|truncatewords:30 }}
         </p>
-        <p>{{ recipe.create_date }}&nbsp;{{ recipe.author }}</p>
-
     {% endfor %}
  {% endblock content %}
