--- a/recipe/templates/recipe/ingridients_list.html
+++ b/recipe/templates/recipe/ingridients_list.html
@@ -7,9 +7,10 @@
         <input type="submit" value="Поиск">
     </form>
     <form method="post" action=".">
+    {% csrf_token %}
         {% for ingr in ingridients_list %}
             <p>
-                <input type="checkbox">
+                <input type="checkbox" name="checks" value="{{ forloop.counter }}">
                 {{ ingr.ingredient }}
                 {{ ingr.category }}
             </p>
