--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Рецепты</title>
-    <link rel="stylesheet" href="{% static "recipe/css/style.css" %}">
+    <link rel="stylesheet" href="{% static "recipe/css/bootstrap.min.css" %}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="" rel="stylesheet">
 </head>
 <body>
-    {% block content %}
-    {% endblock content %}
+{#    <nav class="navbar navbar-inverse navbar-fixed-top">#}
+{#      <div class="container">#}
+{#        <div class="navbar-header">#}
+{#          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">#}
+{#            <span class="sr-only">Toggle navigation</span>#}
+{#            <span class="icon-bar"></span>#}
+{#            <span class="icon-bar"></span>#}
+{#            <span class="icon-bar"></span>#}
+{#          </button>#}
+{#          <a class="navbar-brand" href="#">Anycipe</a>#}
+{#        </div>#}
+{#        <div id="navbar" class="navbar-collapse collapse">#}
+{#          <form class="navbar-form navbar-right">#}
+{#            <div class="form-group">#}
+{#              <input type="text" placeholder="Email" class="form-control">#}
+{#            </div>#}
+{#            <div class="form-group">#}
+{#              <input type="password" placeholder="Password" class="form-control">#}
+{#            </div>#}
+{#            <button type="submit" class="btn btn-success">Sign in</button>#}
+{#          </form>#}
+{#        </div><!--/.navbar-collapse -->#}
+{#      </div>#}
+{#    </nav>#}
+
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'recipe:recipe_list' %}">Рецепты</a></li>
+                <li><a href="{% url 'recipe:ingridients_list' %}">Ингридиенты</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" placeholder="Email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="password" placeholder="Password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-success">Sign in</button>
+            </form>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{% static "recipe/js/bootstrap.min.js" %}"></script>
+{% block content %}
+{% endblock content %}
 </body>
 </html>
