--- a/templates/base.html
+++ b/templates/base.html
@@ -3,40 +3,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Рецепты</title>
     <link rel="stylesheet" href="{% static "recipe/css/bootstrap.min.css" %}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="{% static "recipe/js/bootstrap.js" %}"></script>
 </head>
 <body>
-{#    <nav class="navbar navbar-inverse navbar-fixed-top">#}
-{#      <div class="container">#}
-{#        <div class="navbar-header">#}
-{#          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">#}
-{#            <span class="sr-only">Toggle navigation</span>#}
-{#            <span class="icon-bar"></span>#}
-{#            <span class="icon-bar"></span>#}
-{#            <span class="icon-bar"></span>#}
-{#          </button>#}
-{#          <a class="navbar-brand" href="#">Anycipe</a>#}
-{#        </div>#}
-{#        <div id="navbar" class="navbar-collapse collapse">#}
-{#          <form class="navbar-form navbar-right">#}
-{#            <div class="form-group">#}
-{#              <input type="text" placeholder="Email" class="form-control">#}
-{#            </div>#}
-{#            <div class="form-group">#}
-{#              <input type="password" placeholder="Password" class="form-control">#}
-{#            </div>#}
-{#            <button type="submit" class="btn btn-success">Sign in</button>#}
-{#          </form>#}
-{#        </div><!--/.navbar-collapse -->#}
-{#      </div>#}
-{#    </nav>#}
+<div class="container">
+    <nav class="navbar navbar-default">
 
-<nav class="navbar navbar-default">
-    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -61,14 +38,11 @@
                 <button type="submit" class="btn btn-success">Sign in</button>
             </form>
         </div><!--/.nav-collapse -->
-    </div>
-</nav>
+    </nav>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="{% static "recipe/js/bootstrap.min.js" %}"></script>
 {% block content %}
 {% endblock content %}
+
+</div>
 </body>
 </html>
