--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Anycipe</a>
+            <a class="navbar-brand" href="/">Anycipe</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a class="{% if 'recipe' in request.path %}active{% endif %}" href="{% url 'recipe:recipe_list' %}">Рецепты</a></li>
-                <li><a class="{% if 'ingridients' in request.path %}active{% endif %}" href="{% url 'recipe:ingridients_list' %}">Ингридиенты</a></li>
+                <li {% ifequal request.path '/' %}class="active"{% endifequal %}><a href="{% url 'recipe:recipe_list' %}">Рецепты</a></li>
+                <li {% ifequal '/ingridients/' request.path %}class="active"{% endifequal %}><a href="{% url 'recipe:ingridients_list' %}">Ингридиенты</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group">
