change ingr list

--- a/recipe/templates/recipe/ingridients_list.html
+++ b/recipe/templates/recipe/ingridients_list.html
@@ -25,7 +25,7 @@
                             <span class="input-group-addon">
                                 <input type="checkbox" name="checks" value="{{ forloop.counter }}">
                             </span>
-                            <input type="text" class="form-control" value="{{ ingr.ingredient }} {{ ingr.category }}">
+                            <input type="text" class="form-control" value="{{ ingr.name }} {{ ingr.category }}">
                         </div><!-- /input-group -->
                     </div><!-- /.col-lg-6 -->
             {% endfor %}
