--- a/recipe/templates/recipe/ingredients_list.html
+++ b/recipe/templates/recipe/ingredients_list.html
@@ -18,7 +18,7 @@
     <div class="row">
         <form method="post" action=".">
             {% csrf_token %}
-            {% for ingr in ingridients_list %}
+            {% for ingr in ingredients_list %}
 
                     <div class="col-md-4">
                         <div class="input-group">
