--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -17,7 +17,7 @@
     </form>
     {% for recipe in recipe_list %}
         <div class="col-md-1">
-            <h3><img src="{% static "recipe/img/zaglushka.jpg" %}" class="img-circle" alt="{{ recipe.receipt }}">
+            <h3><img src="{% static "recipe/img/zaglushka.jpg" %}" class="img-thumbnail" alt="{{ recipe.receipt }}">
         </h3>
         </div>
         <div class="col-md-11">
