--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li {% ifequal request.path '/' %}class="active"{% endifequal %}><a href="{% url 'recipe:recipe_list' %}">Рецепты</a></li>
-                <li {% ifequal '/ingridients/' request.path %}class="active"{% endifequal %}><a href="{% url 'recipe:ingridients_list' %}">Ингридиенты</a></li>
+                <li {% ifequal '/ingredients/' request.path %}class="active"{% endifequal %}><a href="{% url 'recipe:ingredients_list' %}">Ингредиенты</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group">
